# esoc2025-ecospecs

./: README.md  pyproject.toml  requirements.txt
data/: A_0.docx  A_1.docx  A_2.docx  B_0.docx  B_1.docx  B_2.docx  C_0.docx  C_1.docx  C_2.docx
docs/: Project overview.md
output/: A_1_parsed.docx
src/ecospecs/: cli.py
src/ecospecs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ecospecs/genai/: table_generator.py
src/ecospecs/parsing/: docx_parser.py  pdf_parser.py  table_processor.py
src/ecospecs/utils/: file_io.py
tests/: test_parsing.py
tests/test_data/: A_1_test.docx  malformed_table.docx  no_tables.docx
